--- a/.travis.yml
+++ b/.travis.yml
@@ -13,12 +13,12 @@ env:
         - BUILD_TYPE=Release COMPILER=g++-5
         - BUILD_TYPE=Release COMPILER=g++-6
         - BUILD_TYPE=Release COMPILER=clang++-3.9
-        - BUILD_TYPE=Release COMPILER=clang++-4.0
+#        - BUILD_TYPE=Release COMPILER=clang++-4.0
         - BUILD_TYPE=Debug COMPILER=g++-4.9
         - BUILD_TYPE=Debug COMPILER=g++-5
         - BUILD_TYPE=Debug COMPILER=g++-6
         - BUILD_TYPE=Debug COMPILER=clang++-3.9
-        - BUILD_TYPE=Debug COMPILER=clang++-4.0
+#        - BUILD_TYPE=Debug COMPILER=clang++-4.0
 
 addons:
         apt:
@@ -31,4 +31,4 @@ addons:
                 - g++-5
                 - g++-6
                 - clang-3.9
-                - clang-4.0
+#                - clang-4.0
