ban clang 4.0 repo

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ addons:
                 sources:
                 - ubuntu-toolchain-r-test
                 - llvm-toolchain-trysty-3.9
-                - llvm-toolchain-trysty-4.0
+#                - llvm-toolchain-trysty-4.0
                 packages:
                 - g++-4.9
                 - g++-5
