--- a/.travis.yml
+++ b/.travis.yml
@@ -24,11 +24,11 @@ addons:
         apt:
                 sources:
                 - ubuntu-toolchain-r-test
-                - llvm-toolchain-trysty-3.9
-#                - llvm-toolchain-trysty-4.0
+                - llvm-toolchain-trusty-3.9
+#                - llvm-toolchain-trusty-4.0
                 packages:
                 - g++-4.9
                 - g++-5
                 - g++-6
-                - clang++-3.9
-#                - clang++-4.0
+                - clang-3.9
+#                - clang-4.0
