--- a/.travis.yml
+++ b/.travis.yml
@@ -32,3 +32,12 @@ addons:
                 - g++-6
                 - clang-3.9
 #                - clang-4.0
+
+matrix:
+        include:
+                - os: osx
+                        osx_image: xcode6.4
+                        env: BUILD_TYPE=Debug
+                - os: osx
+                        osx_image: xcode7.3
+                        env: BUILD_TYPE=Debug
