--- a/.travis.yml
+++ b/.travis.yml
@@ -41,3 +41,6 @@ matrix:
                 - os: osx
                   osx_image: xcode7.3
                   env: BUILD_TYPE=Debug
+                - os: osx
+                  osx_image: xcode8
+                  env: BUILD_TYPE=Debug
