--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,7 +8,7 @@ build_script:
 test_script:
         - cmd: "%BUILD_TYPE%\\hello"
 
-enviroment:
+environment:
         matrix:
                 - TOOLCHAIN_VERSION: 14
                   BUILD_TYPE: Release
