--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ addons:
                         - g++-5
                         - g++-6
                         - clang-3.9
-                        - clang-4.0
+#                        - clang-4.0
 
 matrix:
         include:
