--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,8 +7,7 @@ install:
   - conan install .. --build=missing -s build_type=%BUILD_TYPE% -s compiler="Visual Studio" -s compiler.version=%TOOLCHAIN_VERSION%
 
 build_script:
-  - cmake -G "Visual Studio %TOOLCHAIN_VERSION% Win64" ..
-  - cmake --build . --config %BUILD_TYPE% 
+  - conan test_package --build=missing -s build_type=%BUILD_TYPE% -s compiler="Visual Studio" -s compiler.version=%TOOLCHAIN_VERSION%
 
 test_script:
   - cmd: ctest -V -C %BUILD_TYPE% 
